# torus

./: CHANGELOG.md  README.md  torus.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.4/: package.cache  torus-0.1.0.0-inplace.conf
src/: OrbitPointOfView.hs  Torus.hs
