cabal-version:      2.4
name:               torus
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: A program to show the connection between toruses and planes

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             quoteme
maintainer:         lucahappel99@gmx.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Torus,
                      OrbitPointOfView

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0,
                      GLUT ^>= 2.7.0.16
                      -- matplotlib ^>= 0.7.5
    hs-source-dirs:   src
    default-language: Haskell2010

executable torus
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0,
        GLUT ^>= 2.7.0.16,
        torus

    hs-source-dirs:   app
    default-language: Haskell2010
